<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.instagram.satyajit.instagramclone.loginandRegister.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/english"
                android:textSize="@dimen/textsmall" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/instawrittenlogo" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_white"
                    android:hint="@string/phone_number_email_or_username"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textSize="@dimen/textsmall" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="@dimen/marginbetweenefields"
                    android:background="@drawable/rounded_white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textSize="@dimen/textsmall" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="@dimen/marginbetweenefields"
                    android:background="@drawable/buttonbg"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text2ndsmall"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_your_login_detals"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/textsmall" />

                    <Button
                        android:id="@+id/helpsigningIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:background="@android:color/transparent"
                        android:text="@string/get_help_signing_in"
                        android:textAllCaps="false"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/textsmall"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.7dp"
                        android:layout_weight="3"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/or" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.7dp"
                        android:layout_weight="3"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <Button
                    android:id="@+id/facebooklogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/marginstartpageleft"
                    android:layout_marginRight="@dimen/marginstartpageright"
                    android:layout_marginTop="@dimen/marginbetweenefields"
                    android:background="@drawable/buttonbg"
                    android:text="@string/log_in_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text2ndsmall"
                    android:textStyle="normal" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="vertical">


            <View

                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/linegray" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/textsmall" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>